--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -585,78 +585,83 @@ video {
   }
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .flex {
   display: flex;
 }
 
-.h-12 {
-  height: 3rem;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-12 {
-  width: 3rem;
+.flex-none {
+  flex: none;
 }
 
-.max-w-sm {
-  max-width: 24rem;
+.flex-auto {
+  flex: 1 1 auto;
 }
 
-.shrink-0 {
-  flex-shrink: 0;
+.justify-end {
+  justify-content: flex-end;
 }
 
-.items-center {
-  align-items: center;
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+.border-none {
+  border-style: none;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+.pl-0 {
+  padding-left: 0px;
 }
 
-.p-6 {
-  padding: 1.5rem;
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
-.text-center {
-  text-align: center;
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.indent-4 {
+  text-indent: 1rem;
 }
 
 .text-3xl {
@@ -664,51 +669,90 @@ video {
   line-height: 2.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.font-medium {
-  font-weight: 500;
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
-.text-red-800 {
+.tracking-widest {
+  letter-spacing: 0.1em;
+}
+
+.text-orange-400 {
   --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity));
+  color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
+body {
+  font-family: 'Kumbh Sans', sans-serif;
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+:root {
+  /* Primary */
+  --orange: hsl(26, 100%, 55%);
+  --Pale-orange: hsl(25, 100%, 94%);
+  /*  Neutral */
+  --very-vark-blue: hsl(220, 13%, 13%);
+  --dark-grayish-blue: hsl(219, 9%, 45%);
+  --grayish-blue: hsl(220, 14%, 75%);
+  --light-grayish-blue: hsl(223, 64%, 98%);
+  --White: hsl(0, 0%, 100%);
 }
 
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
+.tx-orange {
+  color: var(--orange);
 }
 
-.underline {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+.bgr-orange {
+  background-color: var(--orange);
 }
 
-.decoration-red-300 {
-  -webkit-text-decoration-color: #fca5a5;
-          text-decoration-color: #fca5a5;
+.tx-vark-blue {
+  color:var(--very-vark-blue);
 }
 
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.tx-dark-blue {
+  color:var(--dark-grayish-blue);
+}
+
+.tx-white {
+  color:var(--White);
 }
