--- a/tailwind.css
+++ b/tailwind.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Kumbh Sans', sans-serif;
+}
+
+:root {
+  /* Primary */
+--orange: hsl(26, 100%, 55%);
+--Pale-orange: hsl(25, 100%, 94%);
+
+/*  Neutral */
+
+--very-vark-blue: hsl(220, 13%, 13%);
+--dark-grayish-blue: hsl(219, 9%, 45%);
+--grayish-blue: hsl(220, 14%, 75%);
+--light-grayish-blue: hsl(223, 64%, 98%);
+--White: hsl(0, 0%, 100%);
+}
+
+.tx-orange {
+  color: var(--orange);
+}
+.bgr-orange {
+  background-color: var(--orange);
+}
+.tx-vark-blue {
+  color:var(--very-vark-blue);
+}
+.tx-dark-blue {
+  color:var(--dark-grayish-blue);
+}
+.tx-white {
+  color:var(--White);
+}
