--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -590,8 +590,8 @@ video {
   margin-bottom: 1rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
+.ml-3 {
+  margin-left: 0.75rem;
 }
 
 .mr-1 {
@@ -608,10 +608,6 @@ video {
 
 .mr-2 {
   margin-right: 0.5rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
 }
 
 .inline-block {
@@ -642,8 +638,12 @@ video {
   width: 0.75rem;
 }
 
-.w-4 {
-  width: 1rem;
+.w-2\.5 {
+  width: 0.625rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .flex-none {
@@ -671,6 +671,10 @@ video {
   align-self: center;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-sm {
   border-radius: 0.125rem;
 }
@@ -679,9 +683,14 @@ video {
   border-style: none;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .py-2 {
@@ -689,9 +698,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .py-2\.5 {
@@ -733,14 +747,6 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
-}
-
-.pr-6 {
-  padding-right: 1.5rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
 }
 
 .pr-7 {
@@ -827,4 +833,11 @@ body {
 
 .tx-white {
   color:var(--White);
+}
+
+.icon-arrown {
+  width: 34px !important;
+  height: 34px !important;
+  align-items: center !important;
+  justify-content: space-evenly !important;
 }
