--- a/tailwind.css
+++ b/tailwind.css
@@ -44,3 +44,13 @@ body {
   align-items: center !important;
   justify-content: space-evenly !important;
 }
+.border-bottom_red-nav:hover {
+  border-bottom: 4px solid var(--orange)!important;
+  padding-bottom: 4px !important;
+}
+.border-radius_avatar:hover {
+  border-radius: 50% !important;
+   border: 1px solid var(--orange)!important;
+  
+  
+}
