--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -734,6 +734,10 @@ video {
   width: 8rem;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .flex-auto {
   flex: 1 1 auto;
 }
@@ -819,15 +823,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-slate-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
-.bg-slate-600\/30 {
-  background-color: rgb(71 85 105 / 0.3);
 }
 
 .bg-cover {
@@ -925,6 +920,14 @@ video {
   padding-right: 1.25rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -951,6 +954,14 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 
 .text-slate-400\/70 {
@@ -1024,7 +1035,7 @@ body {
 }
 
 .border-radius_avatar:hover {
-  border-radius: 40% !important;
+  border-radius: 50% !important;
   border: 1px solid var(--orange)!important;
 }
 
@@ -1069,6 +1080,10 @@ body {
     margin-top: -0.5rem;
   }
 
+  .sm\:ml-40 {
+    margin-left: 10rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1081,8 +1096,16 @@ body {
     display: none;
   }
 
-  .sm\:w-10\/12 {
-    width: 83.333333%;
+  .sm\:w-11\/12 {
+    width: 91.666667%;
+  }
+
+  .sm\:w-full {
+    width: 100%;
+  }
+
+  .sm\:w-40 {
+    width: 10rem;
   }
 
   .sm\:gap-0 {
@@ -1096,6 +1119,10 @@ body {
   .sm\:pl-0 {
     padding-left: 0px;
   }
+
+  .sm\:pr-0 {
+    padding-right: 0px;
+  }
 }
 
 @media (min-width: 576px) {
@@ -1103,17 +1130,59 @@ body {
     margin-left: 6rem;
   }
 
+  .md\:ml-3 {
+    margin-left: 0.75rem;
+  }
+
   .md\:w-9\/12 {
     width: 75%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
 }
 
 @media (min-width: 976px) {
+  .lg\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .lg\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
   .lg\:w-10\/12 {
     width: 83.333333%;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
+  }
+
+  .lg\:pt-12 {
+    padding-top: 3rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .xl\:-ml-11 {
+    margin-left: -2.75rem;
+  }
+
+  .xl\:-ml-12 {
+    margin-left: -3rem;
+  }
+
+  .xl\:w-3\/5 {
+    width: 60%;
   }
 }
