--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -567,15 +567,15 @@ video {
   }
 }
 
-@media (min-width: 976px) {
+@media (min-width: 992px) {
   .container {
-    max-width: 976px;
+    max-width: 992px;
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1400px) {
   .container {
-    max-width: 1440px;
+    max-width: 1400px;
   }
 }
 
@@ -623,8 +623,52 @@ video {
   right: 0.5rem;
 }
 
+.-top-6 {
+  top: -1.5rem;
+}
+
+.-left-6 {
+  left: -1.5rem;
+}
+
+.-right-6 {
+  right: -1.5rem;
+}
+
+.-left-8 {
+  left: -2rem;
+}
+
+.-right-8 {
+  right: -2rem;
+}
+
+.-left-7 {
+  left: -1.75rem;
+}
+
+.-right-7 {
+  right: -1.75rem;
+}
+
+.-top-8 {
+  top: -2rem;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .float-left {
   float: left;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
 }
 
 .mx-3 {
@@ -694,6 +738,10 @@ video {
   height: 100%;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .w-full {
   width: 100%;
 }
@@ -704,6 +752,10 @@ video {
 
 .w-8 {
   width: 2rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-2\.5 {
@@ -726,16 +778,28 @@ video {
   width: 0.75rem;
 }
 
-.w-7 {
-  width: 1.75rem;
+.w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
-.w-32 {
-  width: 8rem;
+.w-auto {
+  width: auto;
 }
 
-.w-40 {
-  width: 10rem;
+.w-1 {
+  width: 0.25rem;
+}
+
+.max-w-max {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .flex-auto {
@@ -744,10 +808,6 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .items-center {
@@ -764,10 +824,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-3 {
-  gap: 0.75rem;
 }
 
 .gap-2 {
@@ -811,18 +867,52 @@ video {
   border-style: none;
 }
 
-.border-current {
-  border-color: currentColor;
-}
-
 .border-orange-500 {
   --tw-border-opacity: 1;
   border-color: rgb(249 115 22 / var(--tw-border-opacity));
 }
 
+.border-current {
+  border-color: currentColor;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-slate-800\/40 {
+  background-color: rgb(30 41 59 / 0.4);
+}
+
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.bg-gray-900\/5 {
+  background-color: rgb(17 24 39 / 0.05);
+}
+
+.bg-gray-900\/100 {
+  background-color: rgb(17 24 39 / 1);
+}
+
+.bg-gray-900\/80 {
+  background-color: rgb(17 24 39 / 0.8);
+}
+
+.bg-neutral-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
+
+.bg-neutral-900\/90 {
+  background-color: rgb(23 23 23 / 0.9);
 }
 
 .bg-cover {
@@ -880,12 +970,8 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pr-1 {
@@ -896,6 +982,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pl-36 {
+  padding-left: 9rem;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -904,28 +994,12 @@ video {
   padding-right: 1.75rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
-}
-
-.pl-36 {
-  padding-left: 9rem;
-}
-
-.pl-7 {
-  padding-left: 1.75rem;
-}
-
 .pr-5 {
   padding-right: 1.25rem;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
+.pl-1 {
+  padding-left: 0.25rem;
 }
 
 .text-center {
@@ -954,10 +1028,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.tracking-wider {
-  letter-spacing: 0.05em;
 }
 
 .tracking-widest {
@@ -1043,6 +1113,19 @@ body {
   border-bottom-width: 4px;
 }
 
+.hover\:bg-orange-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+
+.hover\:fill-orange-500:hover {
+  fill: #f97316;
+}
+
+.hover\:stroke-orange-500:hover {
+  stroke: #f97316;
+}
+
 .hover\:no-underline:hover {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
@@ -1072,16 +1155,12 @@ body {
     margin-bottom: 5rem;
   }
 
-  .sm\:ml-32 {
-    margin-left: 8rem;
+  .sm\:ml-40 {
+    margin-left: 10rem;
   }
 
   .sm\:-mt-2 {
     margin-top: -0.5rem;
-  }
-
-  .sm\:ml-40 {
-    margin-left: 10rem;
   }
 
   .sm\:block {
@@ -1098,10 +1177,6 @@ body {
 
   .sm\:w-11\/12 {
     width: 91.666667%;
-  }
-
-  .sm\:w-full {
-    width: 100%;
   }
 
   .sm\:w-40 {
@@ -1142,8 +1217,8 @@ body {
     width: 100%;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:grid-flow-col {
+    grid-auto-flow: column;
   }
 
   .md\:pl-0 {
@@ -1151,38 +1226,38 @@ body {
   }
 }
 
-@media (min-width: 976px) {
-  .lg\:ml-0 {
-    margin-left: 0px;
-  }
-
+@media (min-width: 992px) {
   .lg\:ml-5 {
     margin-left: 1.25rem;
+  }
+
+  .lg\:ml-0 {
+    margin-left: 0px;
   }
 
   .lg\:w-10\/12 {
     width: 83.333333%;
   }
 
-  .lg\:w-3\/5 {
-    width: 60%;
-  }
-
   .lg\:pt-12 {
     padding-top: 3rem;
   }
+
+  .lg\:hover\:border-b-4:hover {
+    border-bottom-width: 4px;
+  }
 }
 
-@media (min-width: 1440px) {
-  .xl\:-ml-11 {
-    margin-left: -2.75rem;
-  }
-
+@media (min-width: 1400px) {
   .xl\:-ml-12 {
     margin-left: -3rem;
   }
 
-  .xl\:w-3\/5 {
-    width: 60%;
+  .xl\:w-3\/4 {
+    width: 75%;
+  }
+
+  .xl\:w-11\/12 {
+    width: 91.666667%;
   }
 }
